--- a/content/themes/chwsm/default.hbs
+++ b/content/themes/chwsm/default.hbs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/layout.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/black.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/page.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:700,800,300,400&subset=latin,latin-ext" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Petit+Formal+Script&subset=latin,latin-ext" />
 
